--- a/week_2_intro_workshop/week_2_intro_workshop.ipynb
+++ b/week_2_intro_workshop/week_2_intro_workshop.ipynb
@@ -21,7 +21,8 @@
       },
       "cell_type": "markdown",
       "source": [
-        "![ADSA Logo](http://i.imgur.com/BV0CdHZ.png?2 \"ADSA Logo\")"
+        "![ADSA Logo](http://i.imgur.com/BV0CdHZ.png?
+        \"ADSA Logo\")"
       ]
     },
     {
@@ -458,7 +459,7 @@
       },
       "cell_type": "markdown",
       "source": [
-        "Many other string operations exist which can be found here: https://docs.python.org/2/library/string.html\n",
+        "Many other string operations exist which can be found here: https://docs.python.org/3/library/string.html\n",
         "\n",
         "For instance, if we wanted to turn a string to lowercase, we could use the .lower() method like this:"
       ]
